# magmyx

./: .gitignore  Main.hs  README.md  magmyx.cabal  zip.sh
