name:               magmyx
version:            0.1
synopsis:           Proper command-line-usable repackaging of Harmonix's Magma
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10
extra-source-files: data.tar.gz

executable magmyx
  main-is:          Main.hs
  build-depends:
    base         >= 4.6      && < 5.0
    , filepath   >= 1.3.0.2  && < 1.4
    , directory  >= 1.2.1.0  && < 1.3
    , process    >= 1.2.0.0  && < 1.3
    , file-embed >= 0.0.7    && < 0.1
    , temporary  >= 1.2.0.3  && < 1.3
    , tar        >= 0.4.0.1  && < 0.5
    , zlib       >= 0.5.4.1  && < 0.6
    , bytestring >= 0.10.4.0 && < 0.11
  ghc-options:      -Wall
  default-language: Haskell2010
